[package]
name = "osc_address"
version = "0.2.0"
authors = ["Colin Wallace <wallacoloo@gmail.com>"]

repository = "https://github.com/Wallacoloo/osc_address"
documentation = "https://docs.rs/osc_address/"
readme = "Readme.md"
keywords = ["OSC", "audio"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
