[package]
description = "Macros 1.1 implementation of #[derive(OscAddress)] from the osc_address crate"
name = "osc_address_derive"
version = "0.2.1"
authors = ["Colin Wallace <wallacoloo@gmail.com>"]

repository = "https://github.com/Wallacoloo/osc_address"
documentation = "https://docs.rs/osc_address_derive/"
readme = "Readme.md"
keywords = ["OSC", "audio"]
license = "MIT/Apache-2.0"

[dependencies]
quote = "0.3"
syn = "0.11"

[lib]
proc-macro = true

[dev-dependencies]
#osc_address = { version = "0.2.0", path = "../osc_address" }
osc_address = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_osc = "0.4.1"
